# python-quickjs-runtime

./: .gitignore  MANIFEST.in  README.md  configure.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
c-sources/: binding.c  compat.c  quickjs_wrapper.c
src/quickjs_runtime/: __init__.py  repl.py
tests/: test_console.py  test_file_eval.py  test_quickjs.py  test_require.py  test_runtime.py
