[build-system]
requires = ["zigcc-build @ git+https://github.com/jrialland/zigcc-build@v0.2.0", "ziglang"]
build-backend = "zigcc_build"

[project]
name = "quickjs-runtime"
version = "0.1.1"
description = "Python bindings for QuickJS"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[tool.zigcc-build]
configurer-script = "configure.py"
