[build-system]
requires = ["zigcc-build"]
build-backend = "zigcc_build"

[project]
name = "quickjs-runtime"
version = "0.1.2"
description = "Python bindings for QuickJS"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]


[tool.zigcc-build]
configurer-script = "configure.py"
